--- a/src/Template/Layout/styles/_utility_classes.scss
+++ b/src/Template/Layout/styles/_utility_classes.scss
@@ -99,14 +99,17 @@
 .my-05    { margin-top: $gutter * .5;   margin-bottom: $gutter * .5; }
 .my-1     { margin-top: $gutter;        margin-bottom: $gutter; }
 .my-2     { margin-top: $gutter * 2;    margin-bottom: $gutter * 2; }
+
 .mt-0     { margin-top: 0 !important; }
 .mt-05    { margin-top: $gutter * .5; }
 .mt-1     { margin-top: $gutter; }
+.mt-15    { margin-top: $gutter * 1.5; }
 .mt-2     { margin-top: $gutter * 2; }
 .mt-25    { margin-top: $gutter * 2.5; }
 .mb-0     { margin-bottom: 0 !important; }
 .mb-05    { margin-bottom: $gutter * .5; }
 .mb-1     { margin-bottom: $gutter; }
+.mb-15    { margin-bottom: $gutter * 1.5; }
 .mb-2     { margin-bottom: $gutter * 2; }
 .mb-25    { margin-bottom: $gutter * 2.5; }
 
@@ -116,6 +119,15 @@
 .px-05    { padding-left: $gutter * .5; padding-right: $gutter * .5; }
 .px-1     { padding-left: $gutter;      padding-right: $gutter; }
 .px-2     { padding-left: $gutter * 2;  padding-right: $gutter * 2; }
+
+.pt-05    { padding-top: $gutter * .5; }
+.pt-1     { padding-top: $gutter; }
+.pt-2     { padding-top: $gutter * 2; }
+.pt-25    { padding-top: $gutter * 2.5; }
+.pb-05    { padding-bottom: $gutter * .5; }
+.pb-1     { padding-bottom: $gutter; }
+.pb-2     { padding-bottom: $gutter * 2; }
+.pb-25    { padding-bottom: $gutter * 2.5; }
 
 
 // screen readers only
